Registro xml y kotlin. Base de datos agregada, aunque no sé si funcionando pq me da error.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Fitness coach</string>
+    <string name="registrarse">Registrarse</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="correo_electronico">Correo electronico</string>
+    <string name="password">Contraseña</string>
+    <string name="confirmar_pass">Confirmar contraseña</string>
 </resources>
