--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="password">Contraseña</string>
     <string name="confirmar_pass">Confirmar contraseña</string>
     <string name="perfil">Ajustes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cambiarFoto">Cambiar foto</string>
+    <string name="ActivarNotificaciones">Activar notificaciones</string>
+    <string name="Usuario">Usuario</string>
 </resources>
