--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,24 @@
     <string name="password">Contraseña</string>
     <string name="confirmar_pass">Confirmar contraseña</string>
     <string name="perfil">Ajustes</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cambiarFoto">Cambiar foto</string>
     <string name="ActivarNotificaciones">Activar notificaciones</string>
     <string name="Usuario">Usuario</string>
     <string name="bienvenido">Bienvenido</string>
     <string name="noRegistrado">¿No tienes contraseña? Registrate</string>
+    <string name="red">Red</string>
+    <string name="indigo">Indigo</string>
+    <string name="green">Green</string>
+    <string name="orange">Orange</string>
+    <string name="blue">Blue</string>
+    <string name="yellow">Yellow</string>>
+    <string name="grey">Grey</string>
+    <string name="bluegrey">Blue Grey</string>
+    <string name="amber">Amber</string>
+    <string name="teal">Teal</string>
+    <string name="deeppurple">Deep Purple</string>
+    <string name="cyan">Cyan</string>
+    <string name="brown">Brown</string>
+
 </resources>
