intento de ajustes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="deeppurple">Deep Purple</string>
     <string name="cyan">Cyan</string>
     <string name="brown">Brown</string>
+    <string name="ajustes">Ajustes</string>
 
 </resources>
