--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,11 @@
     <string name="deeppurple">Deep Purple</string>
     <string name="cyan">Cyan</string>
     <string name="brown">Brown</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="Ajustes">Ajustes</string>
+    <string name="Ejercicios">Ejercicios</string>
 
 </resources>
