--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="Ajustes">Ajustes</string>
     <string name="Ejercicios">Ejercicios</string>
+    <string name="rutina">Rutina</string>
 
 </resources>
