--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="Update">Cambiar datos</string>
     <string name="contrasena">Contraseña</string>
     <string name="Bienvenido">Bienvenido</string>
+    <string name="take_photo">Tomar una foto</string>
+    <string name="start_capture">Empezar a grabar</string>
 
 </resources>
