--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="Bienvenido">Bienvenido</string>
     <string name="take_photo">Tomar una foto</string>
     <string name="start_capture">Empezar a grabar</string>
+    <string name="stop_capture">parar de grabar</string>
 
 </resources>
