--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,8 @@
     <string name="take_photo">Tomar una foto</string>
     <string name="start_capture">Empezar a grabar</string>
     <string name="stop_capture">parar de grabar</string>
+    <string name="Read">Mostrar datos</string>
+    <string name="nuevaContraseña">Nueva contraseña</string>
+    <string name="NuevoNombre">Nuevo nombre de usuario</string>
 
 </resources>
