--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="ActivarNotificaciones">Activar notificaciones</string>
     <string name="Usuario">Usuario</string>
     <string name="bienvenido">Bienvenido</string>
-    <string name="noRegistrado">¿No tienes contraseña? Registrate</string>
+    <string name="noRegistrado">¿No tienes cuenta? Registrate</string>
     <string name="red">Red</string>
     <string name="indigo">Indigo</string>
     <string name="green">Green</string>
