--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="avanzado">AVANZADO</string>
     <string name="Empezar">EMPEZAR</string>
     <string name="IniciarSesion">Iniciar Sesión</string>
+    <string name="Inicio">Inicio</string>
 
 </resources>
