Testunitarios y más cosas (no funcionan los tests)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="Empezar">EMPEZAR</string>
     <string name="IniciarSesion">Iniciar Sesión</string>
     <string name="Inicio">Inicio</string>
+    <string name="Principiante">Principiante</string>
 
 </resources>
